[gd_scene load_steps=30 format=3 uid="uid://co2kek5kn7xr2"]

[ext_resource type="Texture2D" uid="uid://d2rdq3i5i8l6p" path="res://black_to_normal_indigo_pixel_background (1).webp" id="1_4snel"]
[ext_resource type="Script" uid="uid://b6edrselxix5h" path="res://lvl_1.gd" id="1_g81ij"]
[ext_resource type="Script" uid="uid://cc1deonpn8330" path="res://press.gd" id="3_f7f4c"]
[ext_resource type="Script" uid="uid://bwt35kiqqilly" path="res://random_moving_button.gd" id="4_bmf8x"]
[ext_resource type="Texture2D" uid="uid://doqi2driikor8" path="res://Picsart_25-09-18_06-56-20-118.png" id="5_f7f4c"]
[ext_resource type="PackedScene" uid="uid://dokrcnme4bjt8" path="res://mouse.tscn" id="5_tmnqu"]
[ext_resource type="Texture2D" uid="uid://dkwbdj0jagj2m" path="res://Picsart_25-09-18_06-57-05-208.png" id="6_beans"]
[ext_resource type="Texture2D" uid="uid://c7j4tf0ppiy6t" path="res://1758153737829.png" id="6_vbeg1"]
[ext_resource type="FontFile" uid="uid://bi11k82rso0ob" path="res://PixelAE-Bold.ttf" id="9_a1bqk"]
[ext_resource type="Texture2D" uid="uid://fhq4iwbkln32" path="res://icon.svg" id="10_4snel"]
[ext_resource type="Texture2D" uid="uid://d085e3oabxsre" path="res://FreeButtons.png/FreeButtons.png" id="11_g81ij"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x5umw"]
texture = ExtResource("11_g81ij")
region_rect = Rect2(32.993, 1.066, 14.06, 13.916)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_akum8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s5spe"]
texture = ExtResource("11_g81ij")
region_rect = Rect2(0.725, 1.042, 14.149, 14.163)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6ada"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g5nw0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tp2bi"]
size = Vector2(162, 101)

[sub_resource type="Animation" id="Animation_vbeg1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(544, 165)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, -332)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hand2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(152, -332)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hand1:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_f7f4c")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hand2:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_f7f4c")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hand1:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("hand2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_tmnqu"]
resource_name = "start_button_up"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(544, 165), Vector2(544, 165), Vector2(544, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(22, -332), Vector2(22, -30)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hand2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(152, -332), Vector2(152, -30)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hand1:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_f7f4c"), ExtResource("6_beans")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hand2:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_f7f4c"), ExtResource("6_beans")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hand1:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 1.02),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(0.7, 0.7), Vector2(-0.7, 0.7)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("hand2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1, 1.02),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-0.7, 0.7), Vector2(-0.7, 0.7), Vector2(0.7, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22vjt"]
_data = {
&"RESET": SubResource("Animation_vbeg1"),
&"start_button_up": SubResource("Animation_tmnqu")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_beans"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_22vjt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0ydl"]
size = Vector2(162, 101)

[sub_resource type="Animation" id="Animation_x5jaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bubble/text:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_c4ygw"]
resource_name = "poping up"
length = 5.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 4.8027506, 5.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1000), Vector2(0, -1000), Vector2(0, -1000), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bubble/text:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.55, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.15, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.5500154, 2.6, 2.65, 3.56, 3.7105424, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "", "ا", "ال", "الز", "الزر", "الزر م", "الزر مع", "الزر معل", "الزر معلق", "الزر معلق", "ح", "حد", "حد ب", "حد بي", "حد بيت", "حد بيتح", "حد بيتحكم", " حد بيتحكم فيه", " حد بيتحكم في", " حد بيتحكم فيه", " حد بيتحكم فيه", "لازم تبقي سريع", "لازم تبقي سريع"]
}

[sub_resource type="Animation" id="Animation_bmf8x"]
resource_name = "text2"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdw6r"]
_data = {
&"RESET": SubResource("Animation_x5jaa"),
&"poping up": SubResource("Animation_c4ygw"),
&"text2": SubResource("Animation_bmf8x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g81ij"]
size = Vector2(104, 734)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5umw"]
size = Vector2(104, 1174)

[node name="lvl1" type="Node2D"]
script = ExtResource("1_g81ij")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(561, 263)
texture = ExtResource("1_4snel")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = 83.0
offset_right = -10.0
offset_bottom = 123.0

[node name="Button" type="Button" parent="Control" groups=["click"]]
layout_mode = 0
offset_left = 544.0
offset_top = 165.0
offset_right = 703.0
offset_bottom = 263.9998
scale = Vector2(1.5, 1.3)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.4)
theme_override_fonts/font = ExtResource("9_a1bqk")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_x5umw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_akum8")
theme_override_styles/hover = SubResource("StyleBoxTexture_s5spe")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v6ada")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g5nw0")
button_mask = 0
text = "START"
script = ExtResource("4_bmf8x")

[node name="Area2D" type="Area2D" parent="Control/Button" groups=["click"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Button/Area2D" groups=["click"]]
position = Vector2(78, 50.5)
shape = SubResource("RectangleShape2D_tp2bi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Button"]
libraries = {
&"": SubResource("AnimationLibrary_22vjt")
}

[node name="hand1" type="Sprite2D" parent="Control/Button"]
visible = false
position = Vector2(22, -332)
rotation = -3.1415925
texture = ExtResource("5_f7f4c")

[node name="hand2" type="Sprite2D" parent="Control/Button"]
visible = false
position = Vector2(152, -332)
rotation = 3.1415927
scale = Vector2(-1, 1)
texture = ExtResource("5_f7f4c")

[node name="Button3" type="Button" parent="Control" groups=["click"]]
visible = false
layout_mode = 0
offset_left = 544.0
offset_top = 165.0
offset_right = 703.0
offset_bottom = 264.00012
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxFlat_beans")
theme_override_styles/focus = SubResource("StyleBoxEmpty_22vjt")
button_mask = 0
text = "start"
script = ExtResource("4_bmf8x")

[node name="Area2D" type="Area2D" parent="Control/Button3" groups=["click"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Button3/Area2D" groups=["click"]]
position = Vector2(78, 50.5)
shape = SubResource("RectangleShape2D_t0ydl")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 952.0
offset_top = 1466.0
offset_right = 992.0
offset_bottom = 1506.0

[node name="buble chat" type="Control" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="bubble" type="Sprite2D" parent="Control2/buble chat"]
texture = ExtResource("6_vbeg1")

[node name="text" type="Label" parent="Control2/buble chat/bubble"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -702.0
offset_top = -386.78503
offset_right = -118.0
offset_bottom = -90.785034
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control2/buble chat"]
libraries = {
&"": SubResource("AnimationLibrary_bdw6r")
}

[node name="mouse" parent="." instance=ExtResource("5_tmnqu")]
position = Vector2(957, 336)

[node name="Node2D" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(-48, 317)
shape = SubResource("RectangleShape2D_g81ij")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(1203, 303)
shape = SubResource("RectangleShape2D_g81ij")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(577, 694)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_x5umw")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2(591, -43)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_x5umw")

[node name="press" type="TouchScreenButton" parent="."]
position = Vector2(987.564, 484.772)
scale = Vector2(0.652, 0.652)
action = "click"
script = ExtResource("3_f7f4c")

[node name="Node2D2" type="Node2D" parent="."]
visible = false
position = Vector2(135, 445)
scale = Vector2(0.503, 0.503)

[node name="TouchScreenButton" type="TouchScreenButton" parent="Node2D2"]
texture_normal = ExtResource("10_4snel")
action = "W"

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Node2D2"]
position = Vector2(-11, 141)
texture_normal = ExtResource("10_4snel")
action = "S"

[node name="TouchScreenButton3" type="TouchScreenButton" parent="Node2D2"]
position = Vector2(166, 92)
texture_normal = ExtResource("10_4snel")
action = "D"

[node name="TouchScreenButton4" type="TouchScreenButton" parent="Node2D2"]
position = Vector2(-170, 91)
texture_normal = ExtResource("10_4snel")
action = "A"

[node name="TouchScreenButton5" type="TouchScreenButton" parent="Node2D2"]
position = Vector2(1803.1809, 101.39163)
texture_normal = ExtResource("10_4snel")
action = "click"

[connection signal="pressed" from="Control/Button" to="Control/Button" method="_on_pressed"]
[connection signal="animation_finished" from="Control/Button/AnimationPlayer" to="Control/Button3" method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Control/Button3" to="Control/Button3" method="_on_pressed"]
[connection signal="pressed" from="press" to="press" method="_on_pressed"]
